--- a/dbconfig.yml
+++ b/dbconfig.yml
@@ -1,5 +1,5 @@
 local:
   dialect: postgres
-  datasource: dbname=gophermart user=postgres password=123456 sslmode=disable
+  datasource: dbname=ya-gophermart user=postgres password=123456 sslmode=disable
   dir: migrations
   table: migrations
